[gd_scene load_steps=3 format=3 uid="uid://f36owwx8a16h"]

[ext_resource type="Script" path="res://health.gd" id="1_suonn"]
[ext_resource type="Texture2D" uid="uid://cmrnoha87yuv2" path="res://4l3cr98s.bmp" id="2_7pn2u"]

[node name="health" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_suonn")

[node name="4l3Cr98s" type="Sprite2D" parent="."]
position = Vector2(2.38419e-07, 0)
scale = Vector2(0.105833, 0.155928)
texture = ExtResource("2_7pn2u")

[node name="4l3Cr98s2" type="Sprite2D" parent="."]
position = Vector2(48, 0)
scale = Vector2(0.105833, 0.155928)
texture = ExtResource("2_7pn2u")

[node name="4l3Cr98s3" type="Sprite2D" parent="."]
position = Vector2(95, 0)
scale = Vector2(0.105833, 0.155928)
texture = ExtResource("2_7pn2u")
